Fix modal z-index

--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -230,7 +230,7 @@ select {
     width: 100%;
     height: 100vh;
     background: rgba(0, 0, 0, 0.2);
-    z-index: 5000;
+    z-index: 10001;
 
     .modal-content {
         box-sizing: border-box;
